infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  namespace: dev-02
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: ts-posts.dev
      http:
        paths:
          - path: /posts
            backend:
              serviceName: posts-srv
              servicePort: 4000
# in hosts
# 127.0.0.1  ts-posts.dev
